--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <img id="stack1" src="/assets/heist.png" alt="">
 </div>
 <p id="top"><strong>Top 10 in your country <img id="arrowright" src="/assets/ArrowRight.png" alt=""></strong></p>
-<div>
+<div class="stack2">
     <div>
         <img id="number" src="/assets/Rank - 01.png" alt="">
         <img src="/assets/red.png" alt="">
@@ -74,5 +74,27 @@
         <img src="/assets/hell.png" alt="">
     </div>
 </div>
+<p id="top"><strong>Trending now  <img id="arrowright" src="/assets/ArrowRight.png" alt=""></strong></p>
+<div class="stack">
+    <img src="/assets/explained.png" alt="">
+    <img src="/assets/into.png" alt="">
+    <img src="/assets/lock.png" alt="">
+    <img src="/assets/queen.png" alt="">
+    <img src="/assets/crown.png" alt="">
+</div>
+<p id="top"><strong>Sci-fi shows <img id="arrowright" src="/assets/ArrowRight.png" alt=""></strong></p>
+<div class="stack">
+    <img src="/assets/carbon.png" alt="">
+    <img src="/assets/another.png" alt="">
+    <img src="/assets/umbrella.png" alt="">
+    <img src="/assets/sense.png" alt="">
+    <img src="/assets/rain.png" alt="">
+</div>
+
+<!-- <footer> -->
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
