--- a/index.html
+++ b/index.html
@@ -94,7 +94,39 @@
 <!-- <footer> -->
 
     <footer>
-        
+        <section class="flex">
+         <div class="diva">
+            <div class="images">
+                <img src="/assets/facebook.png" alt="">
+                <img src="/assets/instagram.png" alt="">
+                <img src="/assets/twitter.png" alt="">
+                <img src="/assets/youtube.png" alt="">
+            </div>
+            <div class="para">
+                <p>Seslendirme ve Alt Yazi</p>
+                <p>Medya Merkezi</p>
+                <p>Gizlilik</p>
+                <p>Bize Ulasin</p>
+                <button class="btn">Hizmet Kodu</button>
+            </div>
+         </div>
+         <div class="div">
+            <p>Sesli Betimleme</p>
+            <p>Yatirimci iliskileri</p>
+            <p>Yasal Hukumler</p>
+         </div>
+         <div class="div">
+            <p>Yardim Merkezi</p>
+            <p>is imkanlari</p>
+            <p>Cerez Terchichleri</p>
+         </div>
+         <div class="div">
+            <p>Hediye Kartlari</p>
+            <p>Kullanim Kosullari</p>
+            <p>Kurumsal Biglier</p>
+         </div>
+        </section>
+        <p class="done">@ 1997-2021 Netflix, Inc. {i-062d573aOee099242}</p>
     </footer>
 </body>
 </html>
