--- a/index.html
+++ b/index.html
@@ -1,132 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Netflix clone</title>
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        .white {
+            filter: invert(1);
+        }
+    </style>
 </head>
+
 <body>
-    <div class="bi">
-    <div class="head">
-       <nav class="sec1">
-          <img id="netflix" src="/assets/NetflixLogoSvg.png" alt="">
-          <p><Strong>Start</Strong></p>
-          <p>Shows</p>
-          <p>Shows</p>
-          <p>Movies</p>
-          <p>New</p>
-          <p>MyList</p>
-       </nav>
-       <div class="icons">
-        <img id="s" src="/assets/Search.png" alt="">
-        <img src="/assets/GiftBox.png" alt="">
-        <img src="/assets/NotificationBell.png" alt="">
-        <img src="/assets/angry1.png" alt="">
-        <img src="/assets/DownArrow.png" alt="">
-       </div>
-    </div>
-    <div>
-        <div>
-            <div class="symbol">
-                <img id="n" src="/assets/Netflix_Symbol_RGB 1.png" alt="">
-                <p id="show"><strong>SHOW</strong></p>
+    <!------ Navbar------>
+    <section class="top">
+
+        <div class="navbar flex">
+            <div class="nav-left flex">
+                <img id="netflix-txt" src="assets/NetflixLogoSvg.png" alt="">
+                <p>Start</p>
+                <p>Shows</p>
+                <p>Movies</p>
+                <p>New</p>
+                <p>My List</p>
             </div>
-            <h1>MAID</h1>
-            <div class="buttons">
-                <button id="play"><img id="img" src="/assets/Play.png" alt=""><p id="p">Play</p></button>
-                <button id="info"><img id="img" src="/assets/Detail.png" alt=""><p id="p">More info</p></button>
+            <div class="nav-right flex">
+                <img src="assets/Search.png" alt="">
+                <img src="assets/GiftBox.png" alt="">
+                <img src="assets/NotificationBell.png" alt="">
+                <img id="angrybird" src="assets/angry-bird.png" alt="">
+                <img src="assets/DownArrow.png" alt="">
             </div>
         </div>
-    </div>
-    <div id="add"><img src="/assets/Add.png" alt=""></div>
-    <div class="see">
-        <p id="see1">See Again <img id="arrowright" src="/assets/ArrowRight.png" alt=""></p>
-    </div>
-</div>
-<div class="stack1">
-    <img id="stack1" src="/assets/you.png" alt="">
-    <img id="stack1" src="/assets/snowpiecer.png" alt="">
-    <img id="stack1" src="/assets/universe.png" alt="">
-    <img id="stack1" src="/assets/last.png" alt="">
-    <img id="stack1" src="/assets/heist.png" alt="">
-</div>
-<p id="top"><strong>Top 10 in your country <img id="arrowright" src="/assets/ArrowRight.png" alt=""></strong></p>
-<div class="stack2">
-    <div>
-        <img id="number" src="/assets/Rank - 01.png" alt="">
-        <img src="/assets/red.png" alt="">
-    </div>
-    <div>
-        <img id="number" src="/assets/Rank - 02.png" alt="">
-        <img src="/assets/jason.png" alt="">
-    </div>
-    <div>
-        <img id="number" src="/assets/Rank - 03.png" alt="">
-        <img src="/assets/squid.png" alt="">
-    </div>
-    <div>
-        <img id="number" src="/assets/Rank - 04.png" alt="">
-        <img src="/assets/central.png" alt="">
-    </div>
-    <div>
-        <img id="number" src="/assets/Rank - 05.png" alt="">
-        <img src="/assets/hell.png" alt="">
-    </div>
-</div>
-<p id="top"><strong>Trending now  <img id="arrowright" src="/assets/ArrowRight.png" alt=""></strong></p>
-<div class="stack">
-    <img src="/assets/explained.png" alt="">
-    <img src="/assets/into.png" alt="">
-    <img src="/assets/lock.png" alt="">
-    <img src="/assets/queen.png" alt="">
-    <img src="/assets/crown.png" alt="">
-</div>
-<p id="top"><strong>Sci-fi shows <img id="arrowright" src="/assets/ArrowRight.png" alt=""></strong></p>
-<div class="stack">
-    <img src="/assets/carbon.png" alt="">
-    <img src="/assets/another.png" alt="">
-    <img src="/assets/umbrella.png" alt="">
-    <img src="/assets/sense.png" alt="">
-    <img src="/assets/rain.png" alt="">
-</div>
 
-<!-- <footer> -->
+        <div class="big-txt">
+            <div class="first flex">
+                <img class="netflix-logo" src="assets/Netflix_Symbol_RGB 1.png" alt="">
+                <h2 class="show-txt">S H O W</h2>
+            </div>
+            <h2 id="Maid">MAID</h2>
+            <div class="btns flex">
+                <button class=" play flex">
+                    <img id="play-btn" src="assets/Play.png" alt="">
+                    <p>Play</p>
+                </button>
+                <button class=" info flex">
+                    <img id="info-btn" class="white" src="assets/Detail.png" alt="">
+                    <p>More Info</p>
+                </button>
+            </div>
+        </div>
 
-    <footer>
-        <section class="flex">
-         <div class="diva">
-            <div class="images">
-                <img src="/assets/facebook.png" alt="">
-                <img src="/assets/instagram.png" alt="">
-                <img src="/assets/twitter.png" alt="">
-                <img src="/assets/youtube.png" alt="">
+        <div class="add">
+            <img class="add-png white" src="assets/Add.png" alt="">
+        </div>
+    </section>
+
+    <section class="main-body flex-column">
+        <div class="see-again flex-column">
+            <p class="category">See again ></p>
+            <div class="items flex">
+                <img class="imgs-row" src="assets/Tile Component-1.png" alt="">
+                <img class="top-png" src="assets/Top10Badge.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-2.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-3.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-4.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-5.png" alt="">
             </div>
-            <div class="para">
-                <p>Seslendirme ve Alt Yazi</p>
-                <p>Medya Merkezi</p>
-                <p>Gizlilik</p>
-                <p>Bize Ulasin</p>
-                <button class="btn">Hizmet Kodu</button>
+        </div>
+        <div class="top-10 flex-column">
+            <p class="category">Top 10 in your country ></p>
+            <div class="items flex">
+                <div class="ranker flex">
+                    <img src="assets/Rank - 01.png" alt="" class="rank">
+                    <img class="imgs-2nd-row-1st" src="assets/red n.png" alt="">
+                </div>
+                <div class="ranker flex">
+                    <img src="assets/Rank - 02.png" alt="" class="rank">
+                    <img class="imgs-2nd-row" src="assets/jason.png" alt="">
+                </div>
+                <div class="ranker flex">
+                    <img src="assets/Rank - 03.png" alt="" class="rank">
+                    <img class="imgs-2nd-row" src="assets/hell.png" alt="">
+                </div>
+                <div class="ranker flex">
+                    <img src="assets/Rank - 04.png" alt="" class="rank">
+                    <img class="imgs-2nd-row" src="assets/squid.png" alt="">
+                </div>
+                <div class="ranker flex">
+                    <img src="assets/Rank - 05.png" alt="" class="rank">
+                    <img class="imgs-2nd-row" src="assets/cent.png" alt="">
+                </div>
+                <img src="assets/Rank - 06.png" alt="" class="rank" id="six-rank">
             </div>
-         </div>
-         <div class="div">
-            <p>Sesli Betimleme</p>
-            <p>Yatirimci iliskileri</p>
-            <p>Yasal Hukumler</p>
-         </div>
-         <div class="div">
-            <p>Yardim Merkezi</p>
-            <p>is imkanlari</p>
-            <p>Cerez Terchichleri</p>
-         </div>
-         <div class="div">
-            <p>Hediye Kartlari</p>
-            <p>Kullanim Kosullari</p>
-            <p>Kurumsal Biglier</p>
-         </div>
-        </section>
-        <p class="done">@ 1997-2021 Netflix, Inc. {i-062d573aOee099242}</p>
-    </footer>
+        </div>
+        <div class="see-again flex-column">
+            <p class="category">Trending now ></p>
+            <div class="items flex">
+                <img class="imgs-row" src="assets/Tile Component-1.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-2.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-3.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-4.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-5.png" alt="">
+            </div>
+        </div>
+        <div class="see-again flex-column">
+            <p class="category">Sci-fi shows ></p>
+            <div class="items flex">
+                <img class="imgs-row" src="assets/Tile Component-1.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-2.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-3.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-4.png" alt="">
+                <img class="imgs-row" src="assets/Tile Component-5.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="footer flex">
+        <div class="foot-1">
+            <ul class="foot-ul">
+                <li>
+                    <div class="social-meadia flex">
+                        <img class="pngs white" src="assets/facebook.png" alt="">
+                        <img class="pngs white" src="assets/instagram.png" alt="">
+                        <img class="pngs white" src="assets/twitter.png" alt="">
+                        <img class="pngs white" src="assets/youtube.png" alt="">
+                    </div>
+                </li>
+                <li>Seslendirme ve Alt Yazi</li>
+                <li>Medya Merkezi</li>
+                <li>Gizlilik</li>
+                <li>Bize Ulaşın</li>
+                <li>
+                    <button class="spanish-btn">Hizmet Kodu</button>
+                </li>
+                <li>©1997-2021 Netflix,Inc. {i-062d573a0ee099242}</li>
+            </ul>
+        </div>
+        <div class="foot-2">
+            <ul class="foot-ul">
+                <li>Sesli Betimleme</li>
+                <li>Yatırımcı İlişkileri</li>
+                <li>Yasal Hükümler</li>
+            </ul>
+        </div>
+        <div class="foot-3">
+            <ul class="foot-ul">
+                <li>Yardım Merkezi</li>
+                <li>İş İmkanları</li>
+                <li>Çerez Tercihleri</li>
+            </ul>
+        </div>
+        <div class="foot-4">
+            <ul class="foot-ul">
+                <li>Hediye Kartları</li>
+                <li>Kullanım Koşulları</li>
+                <li>Kurumsal Bilgiler</li>
+            </ul>
+        </div>
+    </section> 
 </body>
+
 </html>
